연관관계 매핑, 인증인가/화이트리스트 기능 개발, 테스트 추가